security/network-policies/base/vote/allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - ports:
    - protocol: UDP
      port: 53

    - protocol: TCP
      port: 53
