security/network-policies/base/vote/allow-external-to-vote.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-vote
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
