security/network-policies/base/vote/allow-ingress-nginx-to-vote.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-vote
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
