security/network-policies/base/vote/allow-vote-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-to-redis
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector:
    matchLabels:
      app: vote

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redis
      podSelector:
        matchLabels:
          app: redis

    ports:
    - protocol: TCP
      port: 6379
