security/network-policies/base/vote/allow-worker-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-to-postgres
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector:
    matchLabels:
      app: worker

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
      podSelector:
        matchLabels:
          app: db

    ports:
    - protocol: TCP
      port: 5432
