security/network-policies/base/vote/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: vote
  labels:
    environment: dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
